# betbot

./: .dockerignore  .env  .env.example  .env.local.example  .gitignore  AUDYT_STRICT_DATA.md  CHARTS_UPGRADE_INSTRUKCJA.txt  CHARTS_UPGRADE_RAPORT.txt  DIFF_TYLKO_GPT.txt  Dockerfile  Dockerfile.live  FINAL_RUN_FIX_README.txt  GPT_AKO_INTEGRATION_README.md  GPT_DEPLOY.txt  INSTALL_LOCAL_WINDOWS.bat  INSTRUKCJA_ETAP_4.txt  INSTRUKCJA_ETAP_5.txt  INSTRUKCJA_ETAP_6_TEST_LOKALNY_I_WDROZENIE.md  INSTRUKCJA_LOGOWANIA.txt  INSTRUKCJA_QUALITY_SHADOW.md  INSTRUKCJA_WDROZENIA_BEZ_NADPISYWANIA_DANYCH.md  INSTRUKCJA_WDROZENIA_ETAP_3D.md  INSTRUKCJA_WDROZENIA_ETAP_4.md  INSTRUKCJA_WDROZENIA_ETAP_5.md  Makefile  PATCH_MANIFEST.txt  PATCH_MANIFEST_SERVER_V10_1_VOLLEYBALL_WEB_PANEL.txt  PATCH_MANIFEST_SERVER_V10_VOLLEYBALL_AUTONOMOUS_SHADOW.txt  PATCH_MANIFEST_SERVER_V4_RECOVERY.txt  PATCH_MANIFEST_SERVER_V6_1_GUARDIAN_COHORT.txt  PATCH_MANIFEST_SERVER_V6_DATA_GUARDIAN.txt  PATCH_MANIFEST_SERVER_V7_1_GUARDIAN_PATH.txt  PATCH_MANIFEST_SERVER_V7_AUTONOMOUS_GOVERNOR.txt  PATCH_MANIFEST_SERVER_V8_1_ARCHITECTURE.txt  PATCH_MANIFEST_SERVER_V8_2_ODDS_TRANSPARENCY.txt  PATCH_MANIFEST_SERVER_V8_3_LOGIN_UI.txt  PATCH_MANIFEST_SERVER_V8_4_LOGIN_METRIC_SPACING.txt  PATCH_MANIFEST_SERVER_V8_EVIDENCE_CAPITAL.txt  PATCH_MANIFEST_SERVER_V9_1_VOLLEYBALL_DATA_COVERAGE.txt  PATCH_MANIFEST_SERVER_V9_2_VOLLEYBALL_IDENTITY_QUALITY.txt  (+241 more)
__pycache__/: FINAL_AUDIT_README.txt  FINAL_LIVE_FIX_README.txt  FIX_AUDIT_REPORT.txt  INSTRUKCJA_ETAP_1.txt  INSTRUKCJA_ETAP_3.txt  Procfile  Procfile.live  README.md  config.py  (+64 more)
(+227 files in other folders)
