[project]
name = "betbot-pro"
version = "10.0.0"
description = "Production-grade betting analytics API with legacy engine bridge"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pandas>=2.2",
  "numpy>=1.26",
  "requests>=2.32",
  "python-dotenv>=1.0",
  "streamlit>=1.36",
  "flask>=3.0",
  "gunicorn>=22.0",
  "openai>=1.0",
  "cryptography>=44.0,<47",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5", "mypy>=1.10", "httpx>=0.27"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["legacy", "data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
